Set up the EID overlap the survivorship order test describes
getExternalEid was stubbed empty, so MdmUpdateContext saw no incoming EID and
the merge branch was reached through !isIncomingResourceHasAnEid() instead of
the overlap the comment describes, leaving the hasEidOverlap stub unused.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QWGNzh3au97YcsXwjMcw6q